force-app/main/default/objects/Opportunity/fields/Freight_First_Shipment_Propose_Date__c.field-meta.xml
<CustomField>
    <fullName>Freight_First_Shipment_Propose_Date__c</fullName>
    <description>Freight - To capture the proposed date of the first shipment for this Opportunity</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date that the customer expects to ship</inlineHelpText>
    <label>First Shipment Propose Date</label>
    <type>Date</type>
</CustomField>