force-app/main/default/objects/Opportunity/fields/Freight_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Freight_Frequency__c</fullName>
    <description>Freight - To capture frequency of the shipment</description>
    <inlineHelpText>Frequency of the shipment</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>One-off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>