force-app/main/default/objects/Opportunity/fields/Freight_Last_Activity_Created_Date_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Freight_Last_Activity_Created_Date_Oppty__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Activity Created Date on Oppty</label>
    <type>Date</type>
</CustomField>