force-app/main/default/objects/Opportunity/fields/Freight_Opportunity_Name_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Freight_Opportunity_Name_Account_Name__c</fullName>
    <formula>Name &amp;&quot;||&quot;&amp; Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name || Account Name</label>
    <type>Text</type>
</CustomField>