force-app/main/default/objects/Opportunity/fields/Freight_Quote_Count__c.field-meta.xml
<CustomField>
    <fullName>Freight_Quote_Count__c</fullName>
    <description>Freight Implementation: To count number of Quotes available for the Opportunity. It will be further used in Validation Rule</description>
    <label>Quote Count</label>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>