force-app/main/default/objects/Opportunity/fields/Freight_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Freight_Shipping__c</fullName>
    <description>Freight - To capture whether this Opportunity is of Domestic or International shipping</description>
    <inlineHelpText>Domestic (AU only) or International shipment, or combination of both</inlineHelpText>
    <label>Shipping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Domestic_International</fullName>
                <label>Domestic and International</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>