force-app/main/default/objects/Opportunity/fields/Freight_Weight__c.field-meta.xml
<CustomField>
    <fullName>Freight_Weight__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Weight</label>
    <length>20</length>
    <type>Text</type>
</CustomField>