force-app/main/default/objects/Opportunity/fields/Global_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Global_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Global opportunity</value>
        </filterItems>
        <infoMessage>Global Opportunity Search</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Local Opportunities</relationshipLabel>
    <relationshipName>Child_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>