force-app/main/default/objects/Opportunity/fields/Implications__c.field-meta.xml
<CustomField>
    <fullName>Implications__c</fullName>
    <description>Text field for commercial managers to complete the details of the implications.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Loyalty:Any implications to current partnerships of Loyalty business in general.</inlineHelpText>
    <label>Implications</label>
    <type>TextArea</type>
</CustomField>