force-app/main/default/objects/Opportunity/fields/Increment_Revenue_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Increment_Revenue_Indicator__c</fullName>
    <formula>if
(
RecordType.DeveloperName ==&quot;Currently_In_Contract&quot;,
	if
	(
	Incremental_Revenue__c ==0, IMAGE(&quot;/resource/Increment_Nochange&quot;, &quot;No Change&quot;) ,
	if
	(
	Incremental_Revenue__c &lt;0, IMAGE(&quot;/resource/Increment_Down&quot;, &quot;Down&quot;) ,
	if
	(
	Incremental_Revenue__c &gt;0, IMAGE(&quot;/resource/Increment_up&quot;, &quot;Up&quot;) ,&quot;&quot;
	)
	)
	),


if
(
RecordType.DeveloperName ==&quot;Currently_Not_In_Contract&quot;,
	if
	(
	 Incremental_Revenue__c   ==0, IMAGE(&quot;/resource/Increment_Nochange&quot;, &quot;No Change&quot;) ,
	if
	(
	Incremental_Revenue__c&lt;0, IMAGE(&quot;/resource/Increment_Down&quot;, &quot;Down&quot;) ,
	if
	(
	Incremental_Revenue__c&gt;0, IMAGE(&quot;/resource/Increment_up&quot;, &quot;Up&quot;) ,&quot;&quot;
	)
	)
	),&quot;&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Trend</label>
    <type>Text</type>
</CustomField>