force-app/main/default/objects/Opportunity/fields/Incremental_DOM_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Incremental_DOM_Market_Share__c</fullName>
    <formula>Proposed_Market_Share__c - QDMEstimated_DOM_QF_Market_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremental Dom Market Share %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>