force-app/main/default/objects/Opportunity/fields/Incremental_INT_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Incremental_INT_Market_Share__c</fullName>
    <formula>Proposed_International_Market_Share__c - QDMEstimated_INT_QF_Market_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremental Int Market Share</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>