force-app/main/default/objects/Opportunity/fields/Incremental_INT_MCA_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Incremental_INT_MCA_Market_Share__c</fullName>
    <formula>Proposed_MCA_Routes_Market_Share__c - QDMEstimated_INT_MCA_Routes_Market_Shar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremental Int  MCA Market Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>