force-app/main/default/objects/Opportunity/fields/Incremental_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Market_Share__c</fullName>
    <formula>IF( RecordType.DeveloperName == &apos;Currently_In_Contract&apos; ,Proposed_Market_Share__c - Current_Market_Share__c, 
IF( RecordType.DeveloperName == &apos;Currently_Not_In_Contract&apos; ,Proposed_Market_Share__c - Estimated_Current_Market_Share__c ,0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated market share increment for the opportunity.</inlineHelpText>
    <label>Incremental Market Share %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>