force-app/main/default/objects/Opportunity/fields/Incremental_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Revenue__c</fullName>
    <formula>IF ( OR ( RecordTypeId = &apos;01290000001IINX&apos;, RecordTypeId = &apos;01290000001YbyD&apos;) ,Amount - QDMEstimated_QF_Revenue__c,0)/*Business &amp; Government*/

/*
IF( RecordType.DeveloperName == &apos;Currently_In_Contract&apos; ,Amount - Current_Revenue__c, 
IF( RecordType.DeveloperName == &apos;Currently_Not_In_Contract&apos; ,Amount - Estimated_Current_Revenue__c,Amount - QDMEstimated_QF_Revenue__c ))
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremental Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>