force-app/main/default/objects/Opportunity/fields/Incremental_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Revenue_Amount__c</fullName>
    <inlineHelpText>Calculated revenue increment for the opportunity.</inlineHelpText>
    <label>Incremental Revenue Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>