force-app/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>List of values which specifies the type of industry</description>
    <inlineHelpText>Industry of the potential partner</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation and Food Services</fullName>
            </value>
            <value>
                <fullName>Administrative and Support Services</fullName>
            </value>
            <value>
                <fullName>Agriculture, Forestry &amp; Fishing</fullName>
            </value>
            <value>
                <fullName>Arts and Recreation Services</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Defence</fullName>
            </value>
            <value>
                <fullName>Education and Training</fullName>
            </value>
            <value>
                <fullName>Electricity, Gas, Water &amp; Waste Services</fullName>
            </value>
            <value>
                <fullName>Entertainment/Media</fullName>
            </value>
            <value>
                <fullName>Financial and Insurance Services</fullName>
            </value>
            <value>
                <fullName>Health Care and Social Assistance</fullName>
            </value>
            <value>
                <fullName>Information Media and Telecommunications</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Oil, Gas, &amp; Energy</fullName>
            </value>
            <value>
                <fullName>Other Services</fullName>
            </value>
            <value>
                <fullName>Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Professional, Scientific &amp; Tech Services</fullName>
            </value>
            <value>
                <fullName>Public Administration and Safety</fullName>
            </value>
            <value>
                <fullName>Rental, Hiring and Real Estate Services</fullName>
            </value>
            <value>
                <fullName>Retail Trade</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Transport, Postal and Warehousing</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Wholesale Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>