force-app/main/default/objects/Opportunity/fields/Insurance_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Remarks</label>
    <type>TextArea</type>
</CustomField>