force-app/main/default/objects/Opportunity/fields/INT_Market_Share_Trend__c.field-meta.xml
<CustomField>
    <fullName>INT_Market_Share_Trend__c</fullName>
    <formula>if 
( 
Incremental_INT_Market_Share__c &gt; 0.05, IMAGE(&quot;/resource/Increment_up&quot;, &quot;Up&quot;), 
	if 
	( 
		Incremental_INT_Market_Share__c &lt; -0.05, IMAGE(&quot;/resource/Increment_Down&quot;, &quot;Down&quot;) , 
		if 
		( true, IMAGE(&quot;/resource/Increment_Nochange&quot;, &quot;No Change&quot;)  
			,&quot;UNK&quot; 
		) 
	) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Intl Market Share Outcome</label>
    <type>Text</type>
</CustomField>