force-app/main/default/objects/Opportunity/fields/Legal_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Legal_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Remarks</label>
    <type>TextArea</type>
</CustomField>