force-app/main/default/objects/Opportunity/fields/Low_Points_Price_Justification__c.field-meta.xml
<CustomField>
    <fullName>Low_Points_Price_Justification__c</fullName>
    <description>Used by Loyalty Sales Commercial when Low points price provided by Commercial Manager</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Low Points Price Justification</label>
    <type>TextArea</type>
</CustomField>