force-app/main/default/objects/Opportunity/fields/Market_Share_Source__c.field-meta.xml
<CustomField>
    <fullName>Market_Share_Source__c</fullName>
    <description>Agency, information account managers</description>
    <label>Market Share Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IPR</fullName>
            </value>
            <value>
                <fullName>Midas</fullName>
            </value>
            <value>
                <fullName>Consolidator</fullName>
            </value>
            <value>
                <fullName>Inhouse Ticket Centre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>