force-app/main/default/objects/Opportunity/fields/Minimum_Spend_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Spend_Commitment__c</fullName>
    <description>Text field to capture minimum spend commitment in dollars.Values are captured up to 2 decimal points</description>
    <inlineHelpText>Key information around this account for Loyalty</inlineHelpText>
    <label>Minimum Spend Commitment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>