force-app/main/default/objects/Opportunity/fields/No_of_Contracts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Contracts__c</fullName>
    <label>No of Contracts</label>
    <summaryFilterItems>
        <field>Contract__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>