force-app/main/default/objects/Opportunity/fields/No_of_Tickets__c.field-meta.xml
<CustomField>
    <fullName>No_of_Tickets__c</fullName>
    <label>No of Tickets</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>