force-app/main/default/objects/Opportunity/fields/Number_of_Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Since_Last_Activity__c</fullName>
    <formula>TODAY() - DATEVALUE( LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days Since Last Modified Oppty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>