force-app/main/default/objects/Opportunity/fields/Number_of_Proposals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Proposals__c</fullName>
    <label>Number of Proposals</label>
    <summaryForeignKey>Proposal__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>