force-app/main/default/objects/Opportunity/fields/Open_skies_policy__c.field-meta.xml
<CustomField>
    <fullName>Open_skies_policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open skies policy</label>
    <type>Checkbox</type>
</CustomField>