force-app/main/default/objects/Opportunity/fields/Opp_update_counter__c.field-meta.xml
<CustomField>
    <fullName>Opp_update_counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>To determine how many times an opportunity gets updated post closure for B&amp;G Opportunities and post submission for SME product &gt;&gt; AEQCC partner plus.</description>
    <label>Opp update counter</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>