force-app/main/default/objects/Opportunity/fields/Opportunity_Creator__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Creator__c</fullName>
    <description>To use this flag to determine My opportunities where the owner is someone else.</description>
    <formula>IF( CreatedById = $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Creator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>