force-app/main/default/objects/Opportunity/fields/Opportunity_Type_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type_Reporting__c</fullName>
    <description>Used for reporting B&amp;G (CA,QBS And SME Product</description>
    <formula>IF ( 

AND( 
RecordTypeId = &apos;01290000001IINX&apos;, /*Business &amp; Government*/ 
ISPICKVAL ( Category__c , &apos;Corporate Airfares&apos;)), TEXT(Category__c)&amp;&apos; - &apos;&amp;TEXT( Sub_Type_Level_1__c)&amp;&apos; &apos;&amp;TEXT( Sub_Type_Level_2__c), 

/*False*/ 
IF( 
AND( RecordTypeId = &apos;01290000001IINX&apos;, /*Business &amp; Government*/ 
ISPICKVAL (Category__c, &apos;Qantas Business Savings&apos;)),TEXT(Category__c)&amp;&apos; - &apos;&amp;TEXT( Sub_Type_Level_1__c)&amp;&apos; &apos;&amp;TEXT( Sub_Type_Level_2__c), 

/*False*/ 
IF( 
RecordTypeId = &apos;01290000001IINZ&apos;,/*SME Product*/ 
TEXT ( Type )&amp;&apos; - &apos; &amp;TEXT( Sub_Type_Level_1__c)&amp;&apos; &apos; &amp; TEXT( Sub_Type_Level_2__c), 

&apos;Others&apos;)))</formula>
    <label>Opportunity Type Reporting</label>
    <type>Text</type>
</CustomField>