force-app/main/default/objects/Opportunity/fields/Opportunity_Type_System__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type_System__c</fullName>
    <label>Opportunity Type [System]</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency Partnerships</fullName>
            </value>
            <value>
                <fullName>Business and Government</fullName>
            </value>
            <value>
                <fullName>Charters</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>SME Product</fullName>
            </value>
            <value>
                <fullName>Sales Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>