force-app/main/default/objects/Opportunity/fields/Origin_Destination__c.field-meta.xml
<CustomField>
    <fullName>Origin_Destination__c</fullName>
    <description>For 9794</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Origin-Destination</label>
    <length>30</length>
    <type>Text</type>
</CustomField>