force-app/main/default/objects/Opportunity/fields/Other_reasons__c.field-meta.xml
<CustomField>
    <fullName>Other_reasons__c</fullName>
    <description>To record if reasons if  &apos;Other&apos; is selected at &apos;Reason for closure&apos;. Mandatory when &apos;other&apos; is selected.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use this field to enter any additional comments in support of the closure of the opportunity.</inlineHelpText>
    <label>Closure Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>