force-app/main/default/objects/Opportunity/fields/Overdue_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Opportunity__c</fullName>
    <description>To return if the Opportunity is overdue (greater than today) and Opportunity is still open</description>
    <formula>IF ( AND ( CloseDate &lt; Today (),  IsClosed = FALSE),1,0)</formula>
    <label>Overdue Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>