force-app/main/default/objects/Opportunity/fields/Part_of_Corporate_Deal__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Corporate_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part of Corporate Deal?</label>
    <type>Checkbox</type>
</CustomField>