force-app/main/default/objects/Opportunity/fields/Partner_Value__c.field-meta.xml
<CustomField>
    <fullName>Partner_Value__c</fullName>
    <description>Based on Annualised Deal Value of  QFF and QBR  Return either Low,Medium or High</description>
    <formula>IF(ISPICKVAL(Type,&apos;Qantas Frequent Flyer&apos;),
IF(Amount&gt;=0 &amp;&amp; Amount&lt;2000000, &apos;Low&apos;,
   IF(Amount&gt;=2000000 &amp;&amp; Amount&lt;5000000,&apos;Medium&apos;,
   IF(Amount&gt;=5000000 ,&apos;High&apos;,&apos;&apos;))),
IF(ISPICKVAL(Type,&apos;Qantas Business Rewards&apos;),
IF(Amount&gt;=0 &amp;&amp; Amount&lt;400000, &apos;Low&apos;,
   IF(Amount&gt;=400000 &amp;&amp; Amount&lt;1000000,&apos;Medium&apos;,
   IF(Amount&gt;=1000000 ,&apos;High&apos;,&apos;&apos;))),&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Requires the value band range</inlineHelpText>
    <label>Partner Value</label>
    <type>Text</type>
</CustomField>