force-app/main/default/objects/Opportunity/fields/Partnership_type__c.field-meta.xml
<CustomField>
    <fullName>Partnership_type__c</fullName>
    <description>Field defining the type of partnership</description>
    <label>Partnership type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Earn</fullName>
            </value>
            <value>
                <fullName>Burn</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>