force-app/main/default/objects/Opportunity/fields/PartnerType__c.field-meta.xml
<CustomField>
    <fullName>PartnerType__c</fullName>
    <description>Partner Type ---- (text) field on Lead and Opportunity (Note: use drop-down on web-form for Partner Platform) 
Existing Qantas partner 
Prospective Qantas partner</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>