force-app/main/default/objects/Opportunity/fields/Points_Per__c.field-meta.xml
<CustomField>
    <fullName>Points_Per__c</fullName>
    <description>This field is used to capture number values and are up to 2 decimal points</description>
    <inlineHelpText>Points issued per $</inlineHelpText>
    <label>Points Per $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>