force-app/main/default/objects/Opportunity/fields/Precedent__c.field-meta.xml
<CustomField>
    <fullName>Precedent__c</fullName>
    <description>Loyalty commercial field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Precedent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>