force-app/main/default/objects/Opportunity/fields/Price_Per_Point__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Point__c</fullName>
    <description>This field captures dollar values and are up to 4 decimal points.</description>
    <inlineHelpText>How much an individual point costs (Please enter the value in Dollars)</inlineHelpText>
    <label>Price Per Point excluding GST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>