force-app/main/default/objects/Opportunity/fields/Program_Fee__c.field-meta.xml
<CustomField>
    <fullName>Program_Fee__c</fullName>
    <defaultValue>20000</defaultValue>
    <description>Field to capture currency value and has a default value as 20000</description>
    <inlineHelpText>Additional cost to partner for signing up to a program</inlineHelpText>
    <label>Program Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>