force-app/main/default/objects/Opportunity/fields/Projected_Billing_This_FY_Text__c.field-meta.xml
<CustomField>
    <fullName>Projected_Billing_This_FY_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Projected Billing This FY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>