force-app/main/default/objects/Opportunity/fields/Proposed_Contracted_Cost_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Contracted_Cost_of_Sale__c</fullName>
    <description>Agency partnerShips</description>
    <label>Proposed Contracted Cost of Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>