force-app/main/default/objects/Opportunity/fields/Proposed_Contracted_Cost_of_Sale_Percent__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Contracted_Cost_of_Sale_Percent__c</fullName>
    <label>Proposed Contracted Cost of Sale (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>