force-app/main/default/objects/Opportunity/fields/Proposed_DOM_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposed_DOM_Revenue_Amount__c</fullName>
    <formula>Amount  -  Proposed_INT_Revenue_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Dom Revenue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>