force-app/main/default/objects/Opportunity/fields/Proposed_INT_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposed_INT_Revenue_Amount__c</fullName>
    <label>Proposed Int Revenue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>